# bebytes_macro

./: .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  BEBYTES_REFERENCE.md  BITS_ATTRIBUTE_ANALYSIS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  MARKER_ATTRIBUTES.md  Makefile.toml  PERFORMANCE_PROFILING.md  PROFILING.md  README.md  SIZE_EXPRESSIONS.md  TTT_IMPROVEMENTS.md  VERIFICATION_RESULTS.md  profile.sh  setup-hooks.sh
.cargo/: mutants.toml
.devcontainer/: Dockerfile  devcontainer.json
.githooks/: pre-commit  pre-commit-fast  pre-push
.github/workflows/: bump-bebytes-derive.yml  bump-bebytes.yml  publish-crates.yml  rust.yml  test-branch.yml
bebytes/: Cargo.toml  README.md  benchmark_suite.sh
bebytes/bebytes/tests/position_tracking/: test_auto_sized.rs
bebytes/benches/: cache_performance.rs  memory_allocation.rs  network_protocols.rs  serialization.rs
bebytes/examples/: bytes_performance_benchmark.rs  extensive_benchmark.rs  no_std_example.rs  no_std_simple.rs  optimization_test.rs  raw_pointer_benchmark.rs  size_expressions.rs  test_raw_pointer.rs  ttt_pattern.rs  wasm_test.rs
bebytes/src/: buffer.rs  builder.rs  interpreter.rs  lib.rs
bebytes/tests/: README.md  arithmetic_mutations.rs  attribute_edge_cases.rs  bit_arithmetic.rs  bitfields.rs  bitwise_mutations.rs  char_support.rs  check_optimization.rs  comparison_mutations.rs  compile_fail.rs  compile_time_tests.rs  core.rs  cstring.rs  derive_critical.rs  direct_buffer_writing.rs  enums.rs  errors.rs  evil_tests.rs  fixed_string.rs  float_bool_support.rs  functional_coverage.rs  integration.rs  interpreter_tests.rs  logical_mutations.rs  macro_expansion.rs  marker_char_support.rs  marker_missing_behavior.rs  marker_not_found_errors.rs  nested_field_test.rs  no_std.rs  optimization_tests.rs  optimization_verification.rs  option_types.rs  position_tracking.rs  property_based.rs  property_tests.rs  protocol_examples.rs  return_value_mutations.rs  runtime_tests.rs  size_expressions.rs  (+20 more)
bebytes/tests/compile_time/: README.md  arrayed.rs  custom_result_alias.rs  enum_discriminant_too_large.rs  enum_discriminant_too_large.stderr  incomplete_byte.rs  incomplete_byte.stderr  invalid_flag_enum.stderr  nested_struct.rs  option.rs  overlap.rs  overlap.stderr  safe_nested_vector.rs  test_chars.rs  test_u16s.rs  test_u32s.rs  test_u8s.rs  unnamed_fields.rs  unsupported_char.rs  unsupported_char.stderr  unsupported_f64.rs  unsupported_f64.stderr  unsupported_isize.rs  unsupported_isize.stderr  unsupported_structure.rs  unsupported_structure.stderr  zero_value_flag_enum.rs
bebytes/tests/compile_time/attributes/: bits_and_size_conflict.rs  bits_and_size_conflict.stderr  fromfield_and_with_conflict.rs  fromfield_and_with_conflict.stderr  multiple_endian_attrs.rs  multiple_endian_attrs.stderr
bebytes/tests/compile_time/bit_fields/: bits_on_non_numeric.rs  bits_on_non_numeric.stderr  exceeds_type_size.rs  exceeds_type_size.stderr  incomplete_byte.stderr  multiple_bits_attributes.rs  multiple_bits_attributes.stderr  zero_bits.rs  zero_bits.stderr
bebytes/tests/compile_time/enums/: data_variants.rs  data_variants.stderr  duplicate_discriminants.rs  duplicate_discriminants.stderr  enum_discriminant_too_large.stderr  explicit_type_too_small.rs  explicit_type_too_small.stderr  flag_enum_too_large.rs  flag_enum_too_large.stderr  invalid_flag_enum.rs  invalid_flag_enum.stderr  missing_repr_u8.rs  missing_repr_u8.stderr
bebytes/tests/compile_time/markers/: non_ascii_char.rs  non_ascii_char.stderr
bebytes/tests/compile_time/size_expressions/: circular_dependency.rs  circular_dependency.stderr  division_by_zero.rs  division_by_zero.stderr  invalid_operator.rs  invalid_operator.stderr  nonexistent_field.rs  nonexistent_field.stderr
bebytes/tests/compile_time/types/: bits_on_bool.rs  bits_on_bool.stderr  bits_on_f32.rs  bits_on_f32.stderr  bits_on_f64.stderr  unsupported_f64.stderr  unsupported_isize.stderr  unsupported_structure.stderr
bebytes/tests/compile_time/vectors/: fromfield_non_numeric.rs  fromfield_non_numeric.stderr  fromfield_nonexistent.rs  fromfield_nonexistent.stderr  multiple_vecs_no_size.rs  multiple_vecs_no_size.stderr  safe_nested_vector.rs  vec_not_last_no_size.rs  vec_not_last_no_size.stderr
bebytes/tests/ui/: invalid_flag_enum.rs  invalid_flag_enum.stderr  zero_value_flag_enum.rs
bebytes_derive/: Cargo.toml  README.md
bebytes_derive/src/: attrs.rs  bit_validation.rs  consts.rs  enums.rs  functional.rs  lib.rs  optimization.rs  raw_pointer.rs  size_expr.rs  structs.rs  utils.rs
docs/: code-generation.md  data-flow.md  mutation-testing.md
profiling_results/: timing_output.txt
