[package]
name = "bebytes"
version = "2.10.1"
edition = "2021"
rust-version = "1.75.0"
license = "MIT"
repository = "https://github.com/fabracht/bebytes_macro"
description = "A Rust library for serialization and deserialization of network structs."
readme = "README.md"
keywords = ["serialization", "deserialization", "network", "wasm", "no-std"]


[[bin]]
name = "macro_test"
path = "./bin/macro_test.rs"
required-features = ["std"]

[[bin]]
name = "performance_benchmark"
path = "./bin/performance_benchmark.rs"
required-features = ["std"]

[dependencies]
bebytes_derive = { version = "2.10.1" }

[dev-dependencies]
trybuild = { version = "1.0.102", features = ["diff"] }
test-case = "3.3.1"
proptest = "1.4"
criterion = { version = "0.7", features = ["html_reports"] }

[[test]]
name = "core"
path = "tests/core.rs"

[[test]]
name = "bitfields"
path = "tests/bitfields.rs"

[[test]]
name = "enums"
path = "tests/enums.rs"

[[test]]
name = "vectors"
path = "tests/vectors.rs"

[[test]]
name = "errors"
path = "tests/errors.rs"

[[test]]
name = "no_std"
path = "tests/no_std.rs"

[[test]]
name = "integration"
path = "tests/integration.rs"

[[test]]
name = "compile_fail"
path = "tests/compile_fail.rs"

[[test]]
name = "property_based"
path = "tests/property_based.rs"

[[example]]
name = "wasm_test"
required-features = ["std"]

[features]
default = ["std"]
std = []
