[package]
name = "bebytes_derive"
description = "A macro to generate/parse binary representation of messages with custom bit fields"
version = "3.0.2"
edition = "2021"
rust-version = "1.75.0"
publish = true
license = "MIT"
repository = "https://github.com/fabracht/bebytes_macro"
readme = "README.md"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0", features = ["extra-traits", "parsing", "full"] }
quote = "1.0"
proc-macro2 = "1.0"

[features]
default = ["std"]
std = []
